# singularity-analysis

./: .gitignore  AI_METRICS_ANALYSIS.md  BEST_IN_CLASS_SUMMARY.md  CHANGELOG.md  Cargo.toml  DATABASE_INTEGRATION_GUIDE.md  ELIXIR_SCA_INTEGRATION_COMPLETE.md  FINAL_SUMMARY.md  LIBRARY_SUMMARY.md  LICENSE  POSTGRESQL_INTEGRATION_GUIDE.md  README.md  TEST_FAILURE_CATEGORIZATION.md  cognitive.rssnap  cyclomatic.rssnap  debug_test.rs  halstead.rssnap  moon.yml  nargs.rssnap  nom.rssnap  test_output.txt
.cargo-build/: .rustc_info.json
.cargo-build/release/: libsingularity_code_analysis.d
examples/: debug_python_ast.rs  inspect_elixir.rs  inspect_python.rs
src/: alterator.rs  analysis_context.rs  ast.rs  c_macro.rs  checker.rs  code_analyzer.rs  comment_rm.rs  concurrent_files.rs  count.rs  find.rs  function.rs  getter.rs  langs.rs  lib.rs  macros.rs  nif.rs  node.rs  ops.rs  parser.rs  parser_registry.rs  preproc.rs  spaces.rs  tools.rs  traits.rs
src/ai/: ai_quality_predictor.rs  code_evolution_tracker.rs  complexity_calculator.rs  mod.rs  semantic_analyzer.rs
src/c_langs_macros/: mod.rs
src/languages/: language_csharp.rs  language_elixir.rs  language_erlang.rs  language_gleam.rs  language_go.rs  language_java.rs  language_javascript.rs  language_lua.rs  language_mozjs.rs  language_python.rs  language_rust.rs  language_tsx.rs  language_typescript.rs  mod.rs
src/metrics/: .cognitive.rs.pending-snap  .cyclomatic.rs.pending-snap  .exit.rs.pending-snap  .halstead.rs.pending-snap  .loc.rs.pending-snap  .nargs.rs.pending-snap  .nom.rs.pending-snap  abc.rs  ai_metrics.rs  cognitive.rs  cognitive.rs.snap  cyclomatic.rs  cyclomatic.rs.snap  exit.rs  exit.rs.snap  halstead.rs  loc.rs  (+11 more)
tests/: deepspeech_test.rs  pdf_js_test.rs  test_beam.rs  test_beam_simple.rs
(+792 files in other folders)
